--- a/index.html
+++ b/index.html
@@ -266,51 +266,61 @@
             },
             {
                 id: 3,
-                title: "TEGEN-KNOOP",
+                title: "KNOOP TEGEN-KNOOP",
                 image: "file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1753.JPEG",
-                description: "Beschrijving van Project 3. Dit is een voorbeeldtekst die je later vervangt door je eigen uitleg over het architectuurproject.",
+                description: "Met afval dat we vonden in de Rabotwijk in Gent, maakten we een knoop, sokkel 				of assemblage. Hierbij hergebruikten we straatafval en transformeerden dit 				tot iets nieuws.In het tweede deel van het proces creëerden we een 					tegenknoop: een element dat een specifiek aspect van de oorspronkelijke 				assemblage uitlicht. Deze tegenknoop zet het werk in een nieuw perspectief 				en zorgt voor een andere focus in vergelijking met de sokkel. Tegelijk 					blijft het verschil tussen de knoop en de tegenknoop duidelijk zichtbaar. In 				mijn geval lichte ik de bogen van de knoop uit door deze vorm uit te 					beitellen.",
                 year: "07032025",
                 type: "Expressie I",
                 images: [
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+3+Image+1",
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+3+Image+2",
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+3+Image+3"
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1748.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1749.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1750.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1751.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1752.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1753.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1754.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1755.JPEG"
                 ]
             },
             {
                 id: 4,
-                title: "COMPACT",
+                title: "COMPACT WONEN",
                 image: "file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1739.JPEG",
-                description: "Beschrijving van Project 4. Dit is een voorbeeldtekst die je later vervangt door je eigen uitleg over het architectuurproject.",
-                year: "",
+                description:"Om van Heusden naar de Gentse Meersen te geraken, is het momenteel onaangenaam 				om er te voet of met de fiets naartoe te gaan. Als oplossing stellen we de 				bouw van een fietsbrug over de Schelde voor, ter hoogte van de ingang van de 				Meersen. Aan deze brug wordt een compacte woning van 80 m2 toegevoegd, 					bedoeld voor twee personen, waarvan één instaat voor het beheer van de brug. 				Omdat de woning op een slibrijke ondergrond komt te staan, is er gekozen 				voor te starten vanuit een paalfundering. We mochten echter ook niet 					volledig kiezen hoe we begonnen aan het gebouw we starten met een referentie 				van een bestaand gebouw. Hier was dit de Nordic Pavilioen in Venice van 				Sverre Fehn ",
+                year: "07012025",
                 type: "Ontwerp I",
                 images: [
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+4+Image+1",
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+4+Image+2"
+                    	"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1739.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1740.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1741.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1742.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1743.JPEG"
                 ]
             },
             {
                 id: 5,
                 title: "GRAF",
                 image: "file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1744.JPEG",
-                description: "Beschrijving van Project 5. Dit is een voorbeeldtekst die je later vervangt door je eigen uitleg over het architectuurproject.",
-                year: "",
+                description: "Tekening van een graf en zijn omgeving in de Westbegraafplaats in Gent. 					Waarbij het meetbare en niet-meetbare samenkomt",
+                year: "22112024",
                 type: "Media I",
                 images: [
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+5+Image+1",
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+5+Image+2"
+                   	"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1744.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1745.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1746.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1747.JPEG"
                 ]
             },
             {
                 id: 6,
                 title: "3X3XA4",
                 image: "file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1737.JPEG",
-                description: "Beschrijving van Project 6. Dit is een voorbeeldtekst die je later vervangt door je eigen uitleg over het architectuurproject.",
-                year: "",
+                description: "3 tekening van telkens 3 A4 van ondermeer de plantentuin in Meise",
+                year: "22112024",
                 type: "Media I",
                 images: [
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+6+Image+1",
-                    "https://via.placeholder.com/800x600/cccccc/969696?text=Project+6+Image+2"
+                   	"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1737.JPEG",
+			"file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1738.JPEG",
                 ]
             },
             {
@@ -318,7 +328,7 @@
                 title: "BOX BOX BOX",
                 image: "file:///C:/Users/decoc/Documents/persoonlijk/website%20architectuur/IMG_1726.JPEG",
                 description: "Beschrijving van Project 7. Dit is een voorbeeldtekst die je later vervangt door je eigen uitleg over het architectuurproject.",
-                year: "",
+                year: "22112024",
                 type: "Media I",
                 images: [
                     "https://via.placeholder.com/800x600/cccccc/969696?text=Project+7+Image+1",
